--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,8 @@
 }
 
 body {
-  background-color: #393E46;
+  /* background-color: #393E46; */
+  background-image: url("../images/back.jpg");
 }
 
 h1 {
