--- a/styles.css
+++ b/styles.css
@@ -12,7 +12,7 @@
 
 body {
   /* background-color: #393E46; */
-  background-image: url("../images/back.jpg");
+  background-image: url("back.jpg");
 }
 
 h1 {
